# crucible

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  TODO.md  clippy.toml  justfile  rust-toolchain.toml
src/client/: Cargo.toml  build.rs
src/client/client-entry/: Cargo.toml  build.rs
src/client/client-entry/src/: dummy_game.rs  main.rs  main_loop.rs
src/client/src/: entry.rs  main.rs
src/client/src/engine/: assets.rs  context.rs  entry.rs  gfx.rs  input.rs  main_loop.rs  mod.rs  resources.rs  root.rs  run_loop.rs  scene.rs  viewport.rs
src/client/src/game/: entry.rs  mod.rs
src/client/src/render/: gfx.rs  mod.rs
src/client/src/util/: ash.rs  bitflag.rs  error.rs  erupt.rs  features.rs  mod.rs  num.rs  pod_ext.rs  str.rs  vec_ext.rs  vector.rs  vk_util.rs  winit.rs
src/client/src/voxel/: data.rs  mod.rs  render.rs
src/common/: Cargo.toml
src/common/src/: lib.rs  material.rs
src/common/src/actor/: kinematic.rs  manager.rs  mod.rs
src/common/src/entity/: material.rs  mod.rs
src/common/src/game/: actor.rs  entity.rs  material.rs  mod.rs  plugin.rs
src/common/src/math/: coord.rs  gfx.rs  mod.rs  num.rs  range.rs  shape.rs  util.rs  vector.rs
src/common/src/polyfill/: cell.rs  iter.rs  lifetime.rs  mod.rs  result.rs
src/common/src/util/: c_enum.rs  cell.rs  linked_list.rs
src/common/src/voxel/: cast.rs  container.rs  coord.rs  data.rs  math.rs  mod.rs
src/common/src/world/: collision.rs  coord.rs  data.rs  material.rs  math.rs  mesh.rs  mod.rs
src/core/: Cargo.toml  game_object.rs  mod.rs  mutability.rs  provider.rs  router.rs
src/core/benches/: phf.rs
src/core/examples/: async_lock.rs  lock_inference.rs  provider.rs
src/core/src/: any_eq.rs  array.rs  c_enum.rs  cell.rs  error.rs  lib.rs  lifetime.rs  macros.rs  marker.rs  ord_f32.rs  range.rs  transmute.rs
src/core/src/debug/: error.rs  label.rs  lifetime.rs  mod.rs  type_id.rs  userdata.rs
src/core/src/ecs/: bundle.rs  celled.rs  context.rs  core.rs  entity.rs  event.rs  mod.rs  provider.rs  query.rs  storage.rs  type_container.rs  universe.rs  userdata.rs
src/core/src/ext/: array.rs  boxing.rs  cell.rs  const_hacks.rs  hasher.rs  lifetime.rs  mod.rs  option.rs  range.rs  result.rs  std_traits.rs  sync.rs  transmute.rs  type_id.rs
src/core/src/foundation/: accessor.rs  accessor.wip.rs  event.rs  exec.rs  ext.rs  lock.rs  mod.rs  provider.rs  world.rs  world.wip.rs
src/core/src/lang/: decompose.rs  explicitly_bind.rs  hash.rs  iter.rs  lifetime.rs  loan.rs  macros.rs  marker.rs  mod.rs  polyfill.rs  std_traits.rs  sync.rs
src/core/src/mem/: alias_magic.rs  array.rs  auto_map.rs  c_enum.rs  drop_guard.rs  eventual_map.rs  explicitly_drop.rs  free_list.rs  inline.rs  layout.rs  linked_list.rs  mod.rs  perfect_map.rs  pool.rs  ptr.rs  type_map.rs  wide_option.rs
src/core/src/prim/: entity.rs  lock.rs  mod.rs
src/core/src/util/: bitmask.rs  c_enum.rs  const_utils.rs  contextual_iter.rs  error.rs  f32.rs  format.rs  free_list.rs  inline.rs  iter_ext.rs  label.rs  layout.rs  linked_list.rs  macros.rs  meta_enum.rs  mod.rs  perfect_map.rs  pod.rs  pointer.rs  ptr.rs  sync.rs  tuple.rs  type_id.rs  wide_option.rs  wrapper.rs
src/crew/: Cargo.toml
src/crew/samples/: driver_example.crew
src/crew/src/: driver.rs  driver_example.crew  main.rs
src/crew/src/parser/: file.rs  generic.rs  mod.rs  token.rs  token_ast.rs  token_parser.rs
src/crew/src/tokenizer/: file.rs  generic.rs  mod.rs  token_ast.rs  token_ir.rs  token_parser.rs
src/crew/src/util/: intern.rs  iter_magic.rs  mod.rs  obj.rs  slice.rs
src/exp/skia-metal/: Cargo.toml  Justfile  build.rs
src/exp/skia-metal/bundle/: .gitignore
src/exp/skia-metal/ffi/: exceptionTrampoline.m
src/exp/skia-metal/src/: main.rs
src/foundation/client/: Cargo.toml
src/foundation/client/src/: lib.rs  main.rs
src/foundation/shared/: Cargo.toml
src/foundation/shared/src/: lib.rs  material.rs
src/game/client/: Cargo.toml
src/game/client/src/: entry.rs  game.rs  main.rs
src/geode/: Cargo.toml  TODO.md
src/geode/benches/: bench.rs  obj_alloc.rs
src/geode/examples/: bench_alloc.rs  bench_atomics.rs  bench_drop.rs  bench_ref_cost.rs  bump_test.rs  playground.rs  simple.rs
src/geode/src/: atomic_ref_cell.rs  debug.rs  entity.rs  event.rs  key.rs  lib.rs  mod.rs  obj.rs  session.rs
src/geode/src/container/: allocator.rs  cell.rs  mod.rs  signal.rs  vec.rs
src/geode/src/core/: debug.rs  gc.rs  lock.rs  mod.rs  obj.rs  object_db.rs  owned.rs  raw_obj.rs  reflect.rs  session.rs
src/geode/src/ecs/: arch_store.rs  archetypal.rs  entity.rs  event.rs  map.rs  map_store.rs  mod.rs  signal.rs  world.rs
src/geode/src/ecs_next/: arch_store.rs  map_store.rs  mod.rs
src/geode/src/entity/: bundle.rs  entity.rs  event.rs  key.rs  mod.rs  provider.rs  raw.rs
src/geode/src/exec/: accessor.rs  atomic_ref_cell.rs  event.rs  key.rs  lock.rs  mod.rs  obj.rs  parameterizable.rs  provider.rs
src/geode/src/internals/: heap.rs  mod.rs
src/geode/src/oop/: accessor.rs  atomic_ref_cell.rs  event.rs  key.rs  mod.rs
src/geode/src/ptr/: cell.rs  mod.rs  obj.rs
src/geode/src/util/: arity.rs  arity_utils.rs  bitset.rs  bump.rs  cell.rs  component.rs  error.rs  free_list.rs  inline_store.rs  iter_ext.rs  lifetime.rs  lock.rs  macro_util.rs  marker.rs  meta_enum.rs  mod.rs  number.rs  ptr.rs  reflect.rs  test_utils.rs  threading.rs  type_id.rs  usually.rs  usually_init.rs
src/server/: Cargo.toml
src/server/src/runtime/: base.rs  logger.rs  mod.rs
src/shared/crucible-math/: Cargo.toml
src/shared/crucible-math/src/: coord.rs  gfx.rs  kinematic.rs  lib.rs  mod.rs  shape.rs  util.rs
src/shared/crucible-world/: Cargo.toml
src/shared/crucible-world/src/: facade.rs  lib.rs  material.rs  mesh.rs
src/util-gfx/main-loop/: Cargo.toml
src/util-gfx/main-loop/examples/: fixed_rate.rs  winit_app.rs
src/util-gfx/main-loop/src/: asset.rs  gfx.rs  input.rs  lib.rs  main_loop.rs  (+2 more)
src/util-gfx/wgpu-ext/: Cargo.toml
src/util-gfx/wgsl-link/: Cargo.toml
src/util/bevy-autoken/: Cargo.toml
src/util/crucible-syn/: Cargo.toml
(+576 files in other folders)
