[workspace]
resolver = "2"
members = [
    "src/client/client-entry",
    "src/shared/crucible-math",
    "src/shared/crucible-world",
    "src/util-gfx/main-loop",
    "src/util-gfx/typed-wgpu",
    "src/util/bevy-autoken",
    "src/util/fmt-util",
    "src/util/hash-util",
    "src/util/newtypes-proc",
    "src/util/newtypes",
    "src/util/std-traits",
    "src/util/typed-glam",
]
