[workspace]
resolver = "2"
members = [
    "src/client/client-entry",
    "src/shared/crucible-math",
    "src/shared/crucible-world",
    "src/util-gfx/main-loop",
    "src/util-gfx/typed-wgpu",
    "src/util/bevy-autoken",
    "src/util/crucible-utils-proc",
    "src/util/crucible-utils",
    "src/util/typed-glam",
]
