[workspace]
resolver = "2"
members = [
    "src/client/client-entry",
    "src/shared/crucible-math",
    "src/shared/crucible-world",
    "src/util-gfx/main-loop",
    "src/util-gfx/typed-wgpu",
    "src/util-gfx/wgpu-ext",
    "src/util-gfx/wgsl-link",
    "src/util/bevy-autoken",
    "src/util/crucible-assets",
    "src/util/crucible-utils-proc",
    "src/util/crucible-utils-tools",
    "src/util/crucible-utils",
    "src/util/crude",
    "src/util/dsl-utils",
    "src/util/typed-glam",
]
exclude = ["src/exp"]

[profile.dev]
opt-level = 1

[profile.dev.package.image]
opt-level = 3
