[package]
name = "crucible-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bort = { git = "https://github.com/Radbuglet/bort.git", rev = "c5015bdb065b6f113f7413dfbbe73b0925af9455" }
crucible-util = { path = "../util" }
derive-where = "1.1.0"
hashbrown = "0.13.2"
log = "0.4.17"
num-traits = "0.2.15"
smallvec = "1.10.0"
typed-glam = { path = "../typed-glam" }
