[package]
name = "crucible-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bort = { workspace = true }
crucible-util = { workspace = true }
derive-where = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
semver = "1.0.17"
smallvec = "1.10.0"
typed-glam = { workspace = true }
