[package]
name = "crucible-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
bytemuck = { version = "1.10.0", features = ["derive"] }
derive-where = "1.0.0"
fastrand = "1.8.0"
itertools = "0.10.3"
log = "0.4.17"
sealed = "0.4.0"
thiserror = "1.0.32"

[dev-dependencies]
criterion = "0.4.0"
nohash-hasher = "0.2.0"

[[bench]]
name = "phf"
harness = false
