[package]
name = "crucible-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
bytemuck = { version = "1.12.3", features = ["derive"] }
derive-where = "1.0.0"
fastrand = "1.8.0"
log = "0.4.17"
thiserror = "1.0.37"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "phf"
harness = false
