[package]
name = "crew"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.10.0", features = ["derive"] }
crucible-core = { path = "../core" }
geode = { path = "../geode" }
hashbrown = { version = "0.12.1", features = ["raw"] }
sealed = "0.4.0"
smallvec = "1.9.0"
thiserror = "1.0.31"
unicode-xid = "0.2.3"
