[package]
name = "geode"
version = "0.1.0"
edition = "2021"

[dependencies]
arr_macro = "0.1.3"
bumpalo = "3.10.0"
derive-where = "1.0.0-rc.3"
once_cell = "1.12.0"
parking_lot = "0.12.1"
sealed = "0.4.0"
thiserror = "1.0.31"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "obj_alloc"
harness = false
