[package]
name = "geode"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
bumpalo = "3.10.0"
bytemuck = { version = "1.10.0", features = ["derive"] }
crucible-core = { path = "../core" }
once_cell = "1.13.0"
parking_lot = "0.12.1"
thiserror = "1.0.31"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "bench"
harness = false
