[package]
name = "crucible-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
crt-marshal-host = { workspace = true }
crucible-util = { version = "0.1.0", path = "../util" }
env_logger = "0.11.2"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
wasmtime = "17.0.1"
wasmtime-wasi = "17.0.1"
