[package]
name = "client-entry"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-autoken = { version = "0.1.0", path = "../../util/bevy-autoken" }
bevy_app = "0.13.2"
bevy_ecs = "0.13.2"
color-backtrace = "0.6.1"
crucible-math = { version = "0.1.0", path = "../../shared/crucible-math" }
crucible-world = { version = "0.1.0", path = "../../shared/crucible-world" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
