[package]
name = "client-entry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
bevy-autoken = { version = "0.1.0", path = "../../util/bevy-autoken" }
bevy_app = "0.13.2"
bevy_ecs = "0.13.2"
color-backtrace = "0.6.1"
crucible-math = { version = "0.1.0", path = "../../shared/crucible-math" }
crucible-world = { version = "0.1.0", path = "../../shared/crucible-world" }
futures = "0.3.30"
main-loop = { version = "0.1.0", path = "../../util-gfx/main-loop" }
native-dialog = "0.7.0"
newtypes = { version = "0.1.0", path = "../../util/newtypes" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.20.0"
winit = "0.30.0"
