[package]
name = "client-entry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
bevy-autoken = { version = "0.1.0", path = "../../util/bevy-autoken" }
bevy_app = "0.13.2"
bevy_ecs = "0.13.2"
bytemuck = "1.16.0"
cbit = "0.1.0"
color-backtrace = "0.6.1"
crucible-assets = { version = "0.1.0", path = "../../util/crucible-assets" }
crucible-math = { version = "0.1.0", path = "../../shared/crucible-math" }
crucible-utils = { version = "0.1.0", path = "../../util/crucible-utils" }
crucible-world = { version = "0.1.0", path = "../../shared/crucible-world" }
fastrand = "2.1.0"
futures = "0.3.30"
image = "0.24.5"
main-loop = { version = "0.1.0", path = "../../util-gfx/main-loop" }
native-dialog = "0.7.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typed-glam = { version = "0.1.0", path = "../../util/typed-glam" }
typed-wgpu = { version = "0.1.0", path = "../../util-gfx/typed-wgpu" }
wgpu = "0.20.0"
winit = "0.30.0"

[dependencies.crevice]
git = "https://github.com/Radbuglet/crevice.git"
rev = "b57559deff995ec5657f7866717600a055f756d5"
features = ["glam"]
