[package]
name = "skia-metal"
version = "0.1.0"
edition = "2021"

[dependencies]
cocoa = "0.26.0"
core-graphics-types = "0.1.1"
fastrand = "2.1.1"
foreign-types-shared = "0.1.1"
libc = "0.2.158"
metal-rs = { package = "metal", version = "0.24.0" }
objc = "0.2.7"
raw-window-handle = "0.6.2"
skia-safe = { version = "0.75.0", features = ["metal"] }
typed-glam = { version = "0.1.0", path = "../../util/typed-glam" }
winit = "0.30.5"

[build-dependencies]
cc = "1.1.18"
