[package]
name = "crucible-foundation-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bort = { workspace = true }
bytemuck = "1.10.0"
crevice = { version = "0.13.0", features = ["glam"] }
crucible-foundation-shared = { workspace = true }
crucible-util = { workspace = true }
derive-where = { workspace = true }
env_logger = "0.10.0"
fastrand = "1.9.0"
futures = "0.3.26"
hashbrown = { workspace = true }
image = "0.24.5"
log = { workspace = true }
thiserror = "1.0.31"
typed-glam = { workspace = true }
typed-wgpu = { workspace = true }
wgpu = { workspace = true, features = ["expose-ids"] }
winit = "0.28.2"
