[package]
name = "crucible-foundation-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bort = { workspace = true }
bytemuck = "1.10.0"
crucible-foundation-shared = { workspace = true }
crucible-util = { workspace = true }
derive-where = { workspace = true }
hashbrown = { workspace = true }
image = "0.24.5"
log = { workspace = true }
thiserror = "1.0.31"
typed-glam = { workspace = true }
typed-wgpu = { workspace = true }
wgpu = { workspace = true, features = ["expose-ids"] }
winit = { workspace = true }

[dependencies.crevice]
git = "https://github.com/Radbuglet/crevice.git"
rev = "b57559deff995ec5657f7866717600a055f756d5"
features = ["glam"]
