[package]
name = "crucible-foundation-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bort = { workspace = true }
crucible-util = { workspace = true }
derive-where = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
smallvec = { workspace = true }
typed-glam = { workspace = true }
