[package]
name = "crucible-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bort = { workspace = true }
crucible-foundation-shared = { workspace = true }
crucible-foundation-client = { workspace = true }
crucible-shared = { workspace = true }
crucible-util = { workspace = true }
env_logger = "0.10.0"
futures = "0.3.28"
image = { workspace = true }
log = { workspace = true }
typed-glam = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
color-backtrace = "0.6.0"
linkme = "0.3.14"
