[package]
name = "crucible-world"
version = "0.1.0"
edition = "2021"

[dependencies]
autoken = { git = "https://github.com/Radbuglet/autoken.git", rev = "c0941f1506fda81dc388f9a52e3770792ee0c822", version = "0.1.0" }
bevy-autoken = { version = "0.1.0", path = "../../util/bevy-autoken" }
bevy_ecs = "0.14.0"
cbit = "0.1.0"
crucible-math = { version = "0.1.0", path = "../crucible-math" }
crucible-utils = { version = "0.1.0", path = "../../util/crucible-utils" }
derive-where = "1.2.7"
rustc-hash = "1.1.0"
smallvec = "1.13.2"
tracing = "0.1.40"
typed-glam = { version = "0.1.0", path = "../../util/typed-glam" }
