[package]
name = "main-loop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bevy-autoken = { version = "0.1.0", path = "../../util/bevy-autoken" }
bevy_ecs = "0.13.2"
fmt-util = { version = "0.1.0", path = "../../util/fmt-util" }
newtypes = { version = "0.1.0", path = "../../util/newtypes" }
rustc-hash = "1.1.0"
thiserror = "1.0.61"
tracing = "0.1.40"
typed-glam = { version = "0.1.0", path = "../../util/typed-glam" }
wgpu = "0.20.0"
winit = "0.30.0"

[dev-dependencies]
fastrand = "2.1.0"
