[package]
name = "wgpu-ext"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.16.1"
crucible-assets = { version = "0.1.0", path = "../../util/crucible-assets" }
crucible-utils = { version = "0.1.0", path = "../../util/crucible-utils" }
image = "0.24.5"
main-loop = { version = "0.1.0", path = "../main-loop" }
typed-glam = { version = "0.1.0", path = "../../util/typed-glam" }
typed-wgpu = { version = "0.1.0", path = "../typed-wgpu" }
wgpu = "0.20.0"
